tests/snapshots/snapshots__budget_either_src_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1013 tokens)

into_either.rs
     4→use super::{Either, Left, Right};
     6→/// Provides methods for converting a type `Self` into either a [`Left`] or [`Right`]
     7→/// variant of [`Either<Self, Self>`](Either).
     8→///
      →…
    14→pub trait IntoEither: Sized {
    15→    /// Converts `self` into a [`Left`] variant of [`Either<Self, Self>`](Either)
    16→    /// if `into_left` is `true`.
      →    …
    29→    fn into_either(self, into_left: bool) -> Either<Self, Self> {
    37→    /// Converts `self` into a [`Left`] variant of [`Either<Self, Self>`](Either)
    38→    /// if `into_left(&self)` returns `true`.
      →    …
    55→    fn into_either_with<F>(self, into_left: F) -> Either<Self, Self>
    56→    where
    57→        F: FnOnce(&Self) -> bool,
    58→    {
    64→impl<T> IntoEither for T {}

iterator.rs
     1→use super::{for_both, Either, Left, Right};
     2→use core::iter;
     4→macro_rules! wrap_either {
    13→/// Iterator that maps left or right iterators to corresponding `Either`-wrapped items.
    14→///
    15→/// This struct is created by the [`Either::factor_into_iter`],
    16→/// [`factor_iter`][Either::factor_iter],
      →…
    19→pub struct IterEither<L, R> {
    20→    inner: Either<L, R>,
    21→}
    24→    pub(crate) fn new(inner: Either<L, R>) -> Self {
    43→impl<L, R> Iterator for Either<L, R> …
    48→    type Item = L::Item;
   185→    type Item = Either<L::Item, R::Item>;

lib.rs
    21→#[cfg(feature = "serde")]
    22→pub mod serde_untagged;
    24→#[cfg(feature = "serde")]
    25→pub mod serde_untagged_optional;
    35→use std::error::Error;
    37→use std::io::{self, BufRead, Read, Seek, SeekFrom, Write};
    39→pub use crate::Either::{Left, Right};
    41→/// The enum `Either` with variants `Left` and `Right` is a general purpose
    42→/// sum type with two cases.
    43→///
      →…
    49→pub enum Either<L, R> {
    50→    /// A value of type `L`.
    51→    Left(L),
    52→    /// A value of type `R`.
    53→    Right(R),
    54→}
    56→/// Evaluate the provided expression for both [`Either::Left`] and [`Either::Right`].
      →…
    81→macro_rules! for_both {
    90→/// Macro for unwrapping the left side of an [`Either`], which fails early
      →…
   113→macro_rules! try_left {
   122→/// Dual to [`try_left!`], see its documentation for more information.
      →…
   124→macro_rules! try_right {
   133→macro_rules! map_either {
   142→mod iterator;
   143→pub use self::iterator::IterEither;
   145→mod into_either;
   146→pub use self::into_either::IntoEither;
  1143→    type Output = L::Output;
  1253→macro_rules! impl_specific_ref_and_mut {
  1327→    type Target = L::Target;
  1522→macro_rules! check_t {
  1536→fn _unsized_ref_propagation() {
  1553→fn _unsized_std_propagation() {

serde_untagged.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    40→enum Either<L, R> {
    41→    Left(L),
      →    …
    45→pub fn serialize …
    58→pub fn deserialize …

serde_untagged_optional.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    40→enum Either<L, R> {
    45→pub fn serialize …
    62→pub fn deserialize …
