tests/snapshots/snapshots__budget_either_src_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2002 tokens)

into_either.rs
     4→use super::{Either, Left, Right};
     6→/// Provides methods for converting a type `Self` into either a [`Left`] or [`Right`]
     7→/// variant of [`Either<Self, Self>`](Either).
     8→///
     9→/// The [`into_either`](IntoEither::into_either) method takes a [`bool`] to determine
    10→/// whether to convert to [`Left`] or [`Right`].
    11→///
    12→/// The [`into_either_with`](IntoEither::into_either_with) method takes a
      →…
    14→pub trait IntoEither: Sized {
    29→    fn into_either …
    55→    fn into_either_with …

iterator.rs
     1→use super::{for_both, Either, Left, Right};
     2→use core::iter;
     4→macro_rules! wrap_either {
    13→/// Iterator that maps left or right iterators to corresponding `Either`-wrapped items.
    14→///
    15→/// This struct is created by the [`Either::factor_into_iter`],
    16→/// [`factor_iter`][Either::factor_iter],
    17→/// and [`factor_iter_mut`][Either::factor_iter_mut] methods.
    18→#[derive(Clone, Debug)]
    19→pub struct IterEither<L, R> {
    20→    inner: Either<L, R>,
    21→}
    24→    pub(crate) fn new(inner: Either<L, R>) -> Self {
    25→        IterEither { inner }
    26→    }
    43→impl<L, R> Iterator for Either<L, R> …
    48→    type Item = L::Item;
   185→    type Item = Either<L::Item, R::Item>;

lib.rs
    21→#[cfg(feature = "serde")]
    22→pub mod serde_untagged;
    24→#[cfg(feature = "serde")]
    25→pub mod serde_untagged_optional;
    27→use core::convert::{AsMut, AsRef};
    28→use core::fmt;
    29→use core::future::Future;
    30→use core::ops::Deref;
    31→use core::ops::DerefMut;
    32→use core::pin::Pin;
    35→use std::error::Error;
    37→use std::io::{self, BufRead, Read, Seek, SeekFrom, Write};
    39→pub use crate::Either::{Left, Right};
    41→/// The enum `Either` with variants `Left` and `Right` is a general purpose
    42→/// sum type with two cases.
    43→///
    44→/// The `Either` type is symmetric and treats its variants the same way, without
    45→/// preference.
    46→/// (For representing success or error, use the regular `Result` enum instead.)
    47→#[cfg_attr(feature = "serde", derive(serde::Serialize, serde::Deserialize))]
      →…
    49→pub enum Either<L, R> {
    50→    /// A value of type `L`.
    51→    Left(L),
    52→    /// A value of type `R`.
    53→    Right(R),
    54→}
    56→/// Evaluate the provided expression for both [`Either::Left`] and [`Either::Right`].
    57→///
    58→/// This macro is useful in cases where both sides of [`Either`] can be interacted with
    59→/// in the same way even though the don't share the same type.
      →…
    81→macro_rules! for_both {
    90→/// Macro for unwrapping the left side of an [`Either`], which fails early
    91→/// with the opposite side. Can only be used in functions that return
    92→/// `Either` because of the early return of `Right` that it provides.
    93→///
      →…
   113→macro_rules! try_left {
   122→/// Dual to [`try_left!`], see its documentation for more information.
   123→#[macro_export]
   124→macro_rules! try_right {
   133→macro_rules! map_either {
   142→mod iterator;
   143→pub use self::iterator::IterEither;
   145→mod into_either;
   146→pub use self::into_either::IntoEither;
   175→    pub fn is_left …
   191→    pub fn is_right …
   206→    pub fn left …
   224→    pub fn right …
   242→    pub fn as_ref …
   264→    pub fn as_mut …
   270→    pub fn as_pin_ref …
   278→    pub fn as_pin_mut …
   298→    pub fn flip …
   317→    pub fn map_left …
   339→    pub fn map_right …
   366→    pub fn map_either …
   397→    pub fn map_either_with …
   424→    pub fn either …
   454→    pub fn either_with …
   476→    pub fn left_and_then …
   497→    pub fn right_and_then …
   521→    pub fn into_iter …
   544→    pub fn iter …
   573→    pub fn iter_mut …
   597→    pub fn factor_into_iter …
   619→    pub fn factor_iter …
   645→    pub fn factor_iter_mut …
   671→    pub fn left_or …
   690→    pub fn left_or_default …
   712→    pub fn left_or_else …
   738→    pub fn right_or …
   757→    pub fn right_or_default …
   779→    pub fn right_or_else …
   809→    pub fn unwrap_left …
   841→    pub fn unwrap_right …
   871→    pub fn expect_left …
   901→    pub fn expect_right …
   923→    pub fn either_into …
   944→    pub fn factor_none …
   966→    pub fn factor_err …
   988→    pub fn factor_ok …
  1009→    pub fn factor_first …
  1030→    pub fn factor_second …
  1050→    pub fn into_inner …
  1065→    pub fn map …
  1076→    pub fn cloned …
  1086→    pub fn copied …
  1098→    pub fn cloned …
  1108→    pub fn copied …
  1118→impl<L, R> From<Result<R, L>> for Either<L, R> …
  1128→impl<L, R> From<Either<L, R>> for Result<R, L> …
  1138→impl<L, R> Future for Either<L, R> …
  1143→    type Output = L::Output;
  1157→impl<L, R> Read for Either<L, R> …
  1183→impl<L, R> Seek for Either<L, R> …
  1195→impl<L, R> BufRead for Either<L, R> …
  1221→impl<L, R> Write for Either<L, R> …
  1253→macro_rules! impl_specific_ref_and_mut {
  1327→    type Target = L::Target;
  1348→impl<L, R> Error for Either<L, R> …
  1358→    fn description …
  1363→    fn cause …
  1521→/// A helper macro to check if AsRef and AsMut are implemented for a given type.
  1522→macro_rules! check_t {
  1536→fn _unsized_ref_propagation() {
  1537→    check_t!(str);
  1538→
      →…
  1552→#[cfg(feature = "std")]
  1553→fn _unsized_std_propagation() {
  1554→    check_t!(::std::path::Path);
  1555→    check_t!(::std::ffi::OsStr);
  1556→    check_t!(::std::ffi::CStr);
  1557→}

serde_untagged.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    38→#[derive(serde::Serialize, serde::Deserialize)]
    39→#[serde(untagged)]
    40→enum Either<L, R> {
    41→    Left(L),
    42→    Right(R),
    43→}

serde_untagged_optional.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    38→#[derive(Serialize, Deserialize)]
    39→#[serde(untagged)]
    40→enum Either<L, R> {
    41→    Left(L),
    42→    Right(R),
    43→}
