tests/snapshots/snapshots__budget_either_src_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (3997 tokens)

into_either.rs
     4→use super::{Either, Left, Right};
     6→/// Provides methods for converting a type `Self` into either a [`Left`] or [`Right`]
     7→/// variant of [`Either<Self, Self>`](Either).
     8→///
      →…
    14→pub trait IntoEither: Sized {
    29→    fn into_either(self, into_left: bool) -> Either<Self, Self> {
    55→    fn into_either_with<F>(self, into_left: F) -> Either<Self, Self>
    56→    where
    57→        F: FnOnce(&Self) -> bool,
    58→    {
    64→impl<T> IntoEither for T {}

iterator.rs
     1→use super::{for_both, Either, Left, Right};
     2→use core::iter;
     4→macro_rules! wrap_either {
    13→/// Iterator that maps left or right iterators to corresponding `Either`-wrapped items.
    14→///
    15→/// This struct is created by the [`Either::factor_into_iter`],
      →…
    19→pub struct IterEither<L, R> {
    20→    inner: Either<L, R>,
    21→}
    24→    pub(crate) fn new(inner: Either<L, R>) -> Self {
    34→    fn extend …
    43→impl<L, R> Iterator for Either<L, R> …
    48→    type Item = L::Item;
    50→    fn next …
    54→    fn size_hint …
    58→    fn fold …
    65→    fn for_each …
    72→    fn count …
    76→    fn last …
    80→    fn nth …
    84→    fn collect …
    91→    fn partition …
    99→    fn all …
   106→    fn any …
   113→    fn find …
   120→    fn find_map …
   127→    fn position …
   140→    fn next_back …
   144→    fn nth_back …
   148→    fn rfold …
   155→    fn rfind …
   168→    fn len …
   185→    type Item = Either<L::Item, R::Item>;
   187→    fn next …
   191→    fn size_hint …
   195→    fn fold …
   202→    fn for_each …
   209→    fn count …
   213→    fn last …
   217→    fn nth …
   221→    fn collect …
   228→    fn partition …
   236→    fn all …
   243→    fn any …
   250→    fn find …
   257→    fn find_map …
   264→    fn position …
   277→    fn next_back …
   281→    fn nth_back …
   285→    fn rfold …
   292→    fn rfind …
   305→    fn len …

lib.rs
    21→#[cfg(feature = "serde")]
    22→pub mod serde_untagged;
    24→#[cfg(feature = "serde")]
    25→pub mod serde_untagged_optional;
    27→use core::convert::{AsMut, AsRef};
    28→use core::fmt;
    29→use core::future::Future;
    30→use core::ops::Deref;
    31→use core::ops::DerefMut;
    32→use core::pin::Pin;
    35→use std::error::Error;
    37→use std::io::{self, BufRead, Read, Seek, SeekFrom, Write};
    39→pub use crate::Either::{Left, Right};
    41→/// The enum `Either` with variants `Left` and `Right` is a general purpose
    42→/// sum type with two cases.
    43→///
      →…
    49→pub enum Either<L, R> {
    50→    /// A value of type `L`.
    51→    Left(L),
    52→    /// A value of type `R`.
    53→    Right(R),
    54→}
    81→macro_rules! for_both {
   113→macro_rules! try_left {
   124→macro_rules! try_right {
   133→macro_rules! map_either {
   142→mod iterator;
   143→pub use self::iterator::IterEither;
   145→mod into_either;
   146→pub use self::into_either::IntoEither;
   149→    fn clone(&self) -> Self {
   156→    fn clone_from(&mut self, source: &Self) {
   175→    pub fn is_left(&self) -> bool {
   191→    pub fn is_right(&self) -> bool {
   206→    pub fn left(self) -> Option<L> {
   224→    pub fn right(self) -> Option<R> {
   242→    pub fn as_ref(&self) -> Either<&L, &R> {
   264→    pub fn as_mut(&mut self) -> Either<&mut L, &mut R> {
   270→    pub fn as_pin_ref(self: Pin<&Self>) -> Either<Pin<&L>, Pin<&R>> {
   278→    pub fn as_pin_mut(self: Pin<&mut Self>) -> Either<Pin<&mut L>, Pin<&mut R>> {
   298→    pub fn flip(self) -> Either<R, L> {
   317→    pub fn map_left<F, M>(self, f: F) -> Either<M, R>
   318→    where
   319→        F: FnOnce(L) -> M,
   320→    {
   339→    pub fn map_right<F, S>(self, f: F) -> Either<L, S>
   340→    where
   341→        F: FnOnce(R) -> S,
   342→    {
   366→    pub fn map_either<F, G, M, S>(self, f: F, g: G) -> Either<M, S>
   367→    where
   368→        F: FnOnce(L) -> M,
   369→        G: FnOnce(R) -> S,
   370→    {
   397→    pub fn map_either_with<Ctx, F, G, M, S>(self, ctx: Ctx, f: F, g: G) -> Either<M, S>
   398→    where
   399→        F: FnOnce(Ctx, L) -> M,
   400→        G: FnOnce(Ctx, R) -> S,
   401→    {
   424→    pub fn either<F, G, T>(self, f: F, g: G) -> T
   425→    where
   426→        F: FnOnce(L) -> T,
   427→        G: FnOnce(R) -> T,
   428→    {
   454→    pub fn either_with<Ctx, F, G, T>(self, ctx: Ctx, f: F, g: G) -> T
   455→    where
   456→        F: FnOnce(Ctx, L) -> T,
   457→        G: FnOnce(Ctx, R) -> T,
   458→    {
   476→    pub fn left_and_then<F, S>(self, f: F) -> Either<S, R>
   477→    where
   478→        F: FnOnce(L) -> Either<S, R>,
   479→    {
   497→    pub fn right_and_then<F, S>(self, f: F) -> Either<L, S>
   498→    where
   499→        F: FnOnce(R) -> Either<L, S>,
   500→    {
   521→    pub fn into_iter(self) -> Either<L::IntoIter, R::IntoIter>
   522→    where
   523→        L: IntoIterator,
   524→        R: IntoIterator<Item = L::Item>,
   525→    {
   544→    pub fn iter(&self) -> Either<<&L as IntoIterator>::IntoIter, <&R as IntoIterator>::IntoIter>
   545→    where
   546→        for<'a> &'a L: IntoIterator,
   547→        for<'a> &'a R: IntoIterator<Item = <&'a L as IntoIterator>::Item>,
   548→    {
   573→    pub fn iter_mut(
   574→        &mut self,
   575→    ) -> Either<<&mut L as IntoIterator>::IntoIter, <&mut R as IntoIterator>::IntoIter>
   576→    where
   577→        for<'a> &'a mut L: IntoIterator,
   578→        for<'a> &'a mut R: IntoIterator<Item = <&'a mut L as IntoIterator>::Item>,
   579→    {
   597→    pub fn factor_into_iter(self) -> IterEither<L::IntoIter, R::IntoIter>
   598→    where
   599→        L: IntoIterator,
   600→        R: IntoIterator,
   601→    {
   619→    pub fn factor_iter(
   620→        &self,
   621→    ) -> IterEither<<&L as IntoIterator>::IntoIter, <&R as IntoIterator>::IntoIter>
   622→    where
   623→        for<'a> &'a L: IntoIterator,
   624→        for<'a> &'a R: IntoIterator,
   625→    {
   645→    pub fn factor_iter_mut(
   646→        &mut self,
   647→    ) -> IterEither<<&mut L as IntoIterator>::IntoIter, <&mut R as IntoIterator>::IntoIter>
   648→    where
   649→        for<'a> &'a mut L: IntoIterator,
   650→        for<'a> &'a mut R: IntoIterator,
   651→    {
   671→    pub fn left_or(self, other: L) -> L {
   690→    pub fn left_or_default(self) -> L
   691→    where
   692→        L: Default,
   693→    {
   712→    pub fn left_or_else<F>(self, f: F) -> L
   713→    where
   714→        F: FnOnce(R) -> L,
   715→    {
   738→    pub fn right_or(self, other: R) -> R {
   757→    pub fn right_or_default(self) -> R
   758→    where
   759→        R: Default,
   760→    {
   779→    pub fn right_or_else<F>(self, f: F) -> R
   780→    where
   781→        F: FnOnce(L) -> R,
   782→    {
   809→    pub fn unwrap_left(self) -> L
   810→    where
   811→        R: core::fmt::Debug,
   812→    {
   841→    pub fn unwrap_right(self) -> R
   842→    where
   843→        L: core::fmt::Debug,
   844→    {
   871→    pub fn expect_left(self, msg: &str) -> L
   872→    where
   873→        R: core::fmt::Debug,
   874→    {
   901→    pub fn expect_right(self, msg: &str) -> R
   902→    where
   903→        L: core::fmt::Debug,
   904→    {
   923→    pub fn either_into<T>(self) -> T
   924→    where
   925→        L: Into<T>,
   926→        R: Into<T>,
   927→    {
   944→    pub fn factor_none(self) -> Option<Either<L, R>> {
   966→    pub fn factor_err(self) -> Result<Either<L, R>, E> {
   988→    pub fn factor_ok(self) -> Result<T, Either<L, R>> {
  1009→    pub fn factor_first(self) -> (T, Either<L, R>) {
  1030→    pub fn factor_second(self) -> (Either<L, R>, T) {
  1050→    pub fn into_inner(self) -> T {
  1065→    pub fn map<F, M>(self, f: F) -> Either<M, M>
  1066→    where
  1067→        F: FnOnce(T) -> M,
  1068→    {
  1076→    pub fn cloned(self) -> Either<L, R>
  1077→    where
  1078→        L: Clone,
  1079→        R: Clone,
  1080→    {
  1086→    pub fn copied(self) -> Either<L, R>
  1087→    where
  1088→        L: Copy,
  1089→        R: Copy,
  1090→    {
  1098→    pub fn cloned(self) -> Either<L, R>
  1099→    where
  1100→        L: Clone,
  1101→        R: Clone,
  1102→    {
  1108→    pub fn copied(self) -> Either<L, R>
  1109→    where
  1110→        L: Copy,
  1111→        R: Copy,
  1112→    {
  1119→    fn from(r: Result<R, L>) -> Self {
  1129→    fn from(val: Either<L, R>) -> Self {
  1143→    type Output = L::Output;
  1145→    fn poll(
  1146→        self: Pin<&mut Self>,
  1147→        cx: &mut core::task::Context<'_>,
  1148→    ) -> core::task::Poll<Self::Output> {
  1162→    fn read(&mut self, buf: &mut [u8]) -> io::Result<usize> {
  1166→    fn read_exact(&mut self, buf: &mut [u8]) -> io::Result<()> {
  1170→    fn read_to_end(&mut self, buf: &mut std::vec::Vec<u8>) -> io::Result<usize> {
  1174→    fn read_to_string(&mut self, buf: &mut std::string::String) -> io::Result<usize> {
  1188→    fn seek(&mut self, pos: SeekFrom) -> io::Result<u64> {
  1200→    fn fill_buf(&mut self) -> io::Result<&[u8]> {
  1204→    fn consume(&mut self, amt: usize) {
  1208→    fn read_until(&mut self, byte: u8, buf: &mut std::vec::Vec<u8>) -> io::Result<usize> {
  1212→    fn read_line(&mut self, buf: &mut std::string::String) -> io::Result<usize> {
  1226→    fn write(&mut self, buf: &[u8]) -> io::Result<usize> {
  1230→    fn write_all(&mut self, buf: &[u8]) -> io::Result<()> {
  1234→    fn write_fmt(&mut self, fmt: fmt::Arguments<'_>) -> io::Result<()> {
  1238→    fn flush(&mut self) -> io::Result<()> {
  1248→    fn as_ref(&self) -> &Target {
  1253→macro_rules! impl_specific_ref_and_mut {
  1297→    fn as_ref(&self) -> &[Target] {
  1307→    fn as_mut(&mut self) -> &mut Target {
  1317→    fn as_mut(&mut self) -> &mut [Target] {
  1327→    type Target = L::Target;
  1329→    fn deref(&self) -> &Self::Target {
  1339→    fn deref_mut(&mut self) -> &mut Self::Target {
  1353→    fn source(&self) -> Option<&(dyn Error + 'static)> {
  1358→    fn description(&self) -> &str {
  1363→    fn cause(&self) -> Option<&dyn Error> {
  1373→    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
  1383→    fn write_str(&mut self, s: &str) -> fmt::Result {
  1387→    fn write_char(&mut self, c: char) -> fmt::Result {
  1391→    fn write_fmt(&mut self, args: fmt::Arguments<'_>) -> fmt::Result {
  1522→macro_rules! check_t {
  1536→fn _unsized_ref_propagation() {
  1553→fn _unsized_std_propagation() {

serde_untagged.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    40→enum Either<L, R> {
    41→    Left(L),
      →    …
    45→pub fn serialize …
    58→pub fn deserialize …

serde_untagged_optional.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    40→enum Either<L, R> {
    45→pub fn serialize …
    62→pub fn deserialize …
