tests/snapshots/snapshots__budget_either_src_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (508 words)

into_either.rs
     6→/// Provides methods for converting a type `Self` into either a [`Left`] or [`Right`]
     7→/// variant of [`Either<Self, Self>`](Either).
     8→///
     9→/// The [`into_either`](IntoEither::into_either) method takes a [`bool`] to determine
      →…
    14→pub trait IntoEither: Sized {
    15→    /// Converts `self` into a [`Left`] variant of [`Either<Self, Self>`](Either)
    16→    /// if `into_left` is `true`.
    17→    /// Converts `self` into a [`Right`] variant of [`Either<Self, Self>`](Either)
    18→    /// otherwise.
    19→    ///
    20→    /// # Examples
    21→    ///
    22→    /// ```
    23→    /// use either::{IntoEither, Left, Right};
    24→    ///
    25→    /// let x = 0;
    26→    /// assert_eq!(x.into_either(true), Left(x));
    27→    /// assert_eq!(x.into_either(false), Right(x));
    28→    /// ```
    29→    fn into_either(self, into_left: bool) -> Either<Self, Self> {
    30→        if into_left {
    31→            Left(self)
    32→        } else {
    33→            Right(self)
    34→        }
    35→    }
    36→
    37→    /// Converts `self` into a [`Left`] variant of [`Either<Self, Self>`](Either)
    38→    /// if `into_left(&self)` returns `true`.
    39→    /// Converts `self` into a [`Right`] variant of [`Either<Self, Self>`](Either)
    40→    /// otherwise.
    41→    ///
    42→    /// # Examples
    43→    ///
    44→    /// ```
    45→    /// use either::{IntoEither, Left, Right};
    46→    ///
    47→    /// fn is_even(x: &u8) -> bool {
    48→    ///     x % 2 == 0
    49→    /// }
    50→    ///
    51→    /// let x = 0;
    52→    /// assert_eq!(x.into_either_with(is_even), Left(x));
    53→    /// assert_eq!(x.into_either_with(|x| !is_even(x)), Right(x));
    54→    /// ```
    55→    fn into_either_with<F>(self, into_left: F) -> Either<Self, Self>
    56→    where
    57→        F: FnOnce(&Self) -> bool,
    58→    {
    59→        let into_left = into_left(&self);
    60→        self.into_either(into_left)
    61→    }
    62→}
iterator.rs
     4→macro_rules! wrap_either {
    13→/// Iterator that maps left or right iterators to corresponding `Either`-wrapped items.
    14→///
    15→/// This struct is created by the [`Either::factor_into_iter`],
    16→/// [`factor_iter`][Either::factor_iter],
      →…
    19→pub struct IterEither<L, R> {
    20→    inner: Either<L, R>,
    21→}
    43→impl<L, R> Iterator for Either<L, R> …
    48→    type Item = L::Item;
   185→    type Item = Either<L::Item, R::Item>;
lib.rs
    21→#[cfg(feature = "serde")]
    22→pub mod serde_untagged;
    24→#[cfg(feature = "serde")]
    25→pub mod serde_untagged_optional;
    41→/// The enum `Either` with variants `Left` and `Right` is a general purpose
    42→/// sum type with two cases.
    43→///
    44→/// The `Either` type is symmetric and treats its variants the same way, without
      →…
    49→pub enum Either<L, R> {
    50→    /// A value of type `L`.
    51→    Left(L),
    52→    /// A value of type `R`.
    53→    Right(R),
    54→}
    81→macro_rules! for_both {
   113→macro_rules! try_left {
   124→macro_rules! try_right {
   133→macro_rules! map_either {
   142→mod iterator;
   145→mod into_either;
  1118→impl<L, R> From<Result<R, L>> for Either<L, R> …
  1128→impl<L, R> From<Either<L, R>> for Result<R, L> …
  1138→impl<L, R> Future for Either<L, R> …
  1143→    type Output = L::Output;
  1157→impl<L, R> Read for Either<L, R> …
  1183→impl<L, R> Seek for Either<L, R> …
  1195→impl<L, R> BufRead for Either<L, R> …
  1221→impl<L, R> Write for Either<L, R> …
  1253→macro_rules! impl_specific_ref_and_mut {
  1327→    type Target = L::Target;
  1348→impl<L, R> Error for Either<L, R> …
  1522→macro_rules! check_t {
  1536→fn _unsized_ref_propagation() {
  1537→    check_t!(str);
  1538→
      →…
  1552→#[cfg(feature = "std")]
  1553→fn _unsized_std_propagation() {
  1554→    check_t!(::std::path::Path);
  1555→    check_t!(::std::ffi::OsStr);
  1556→    check_t!(::std::ffi::CStr);
  1557→}
serde_untagged.rs
    38→#[derive(serde::Serialize, serde::Deserialize)]
    39→#[serde(untagged)]
    40→enum Either<L, R> {
    41→    Left(L),
    42→    Right(R),
    43→}
serde_untagged_optional.rs
    38→#[derive(Serialize, Deserialize)]
    39→#[serde(untagged)]
    40→enum Either<L, R> {
    41→    Left(L),
    42→    Right(R),
    43→}
