tests/snapshots/snapshots__budget_go_multierror_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1019 words)

CHANGELOG.md
     1→## Unreleased …
     3→### Improvements …
     5→### Changes …
     7→### Fixed …
     9→### Security …
README.md
     1→# go-multierror
    10→> **Note**: As of Go 1.20, the standard library provides [`errors.Join`](https://pkg.go.dev/errors#Join) which offers similar functionality for combining multiple errors. **For new projects, we recommend using `errors.Join` from the standard library.** This package provides additional features like custom formatting, the `Group` pattern for concurrent error collection, and utility functions (`Append`, `Flatten`, `Prefix`).
    11→
    12→## Migrating to `errors.Join`
    14→**Basic error aggregation:**
    15→```go
    16→// Before (go-multierror)
    17→var result error
    18→result = multierror.Append(result, err1)
    19→result = multierror.Append(result, err2)
    20→return result
    21→
    22→// After (stdlib)
    23→var errs []error
    24→if err1 != nil {
    25→    errs = append(errs, err1)
    26→}
    27→if err2 != nil {
    28→    errs = append(errs, err2)
    29→}
    30→if len(errs) > 0 {
    31→    return errors.Join(errs...)
    32→}
    33→return nil
    34→```
    35→
    36→**Custom formatting:**
      →…
   104→## Installation and Docs
   106→Install using `go get github.com/hashicorp/go-multierror`.
   107→
   108→Full documentation is available at
   109→https://pkg.go.dev/github.com/hashicorp/go-multierror
   110→
   111→### Requires go version 1.13 or newer
   113→`go-multierror` requires go version 1.13 or newer. Go 1.13 introduced
   114→[error wrapping](https://golang.org/doc/go1.13#error_wrapping), which
   115→this library takes advantage of.
   116→
   117→If you need to use an earlier version of go, you can use the
   118→[v1.0.0](https://github.com/hashicorp/go-multierror/tree/v1.0.0)
   119→tag, which doesn't rely on features in go 1.13.
   120→
   121→If you see compile errors that look like the below, it's likely that
   122→you're on an older version of go:
   123→
   124→```
   125→/go/src/github.com/hashicorp/go-multierror/multierror.go:112:9: undefined: errors.As
   126→/go/src/github.com/hashicorp/go-multierror/multierror.go:117:9: undefined: errors.Is
   127→```
   128→
   129→## Usage
   131→go-multierror is easy to use and purposely built to be unobtrusive in
   132→existing Go applications/libraries that may not be aware of it.
   133→
   134→**Building a list of errors**
   135→
   136→The `Append` function is used to create a list of errors. This function
   137→behaves a lot like the Go built-in `append` function: it doesn't matter
   138→if the first argument is nil, a `multierror.Error`, or any other `error`,
   139→the function behaves as you would expect.
   140→
   141→```go
   142→var result error
   143→
   144→if err := step1(); err != nil {
   145→	result = multierror.Append(result, err)
   146→}
   147→if err := step2(); err != nil {
   148→	result = multierror.Append(result, err)
   149→}
   150→
   151→return result
   152→```
   153→
      →…
append.go
     6→// Append is a helper function that will append more errors
     7→// onto an Error in order to create a larger multi-error.
     8→//
      →…
    14→func Append(err error, errs ...error) *Error {
append_test.go
flatten.go
     6→// Flatten flattens the given error, merging any *Errors together into
     7→// a single *Error.
     8→func Flatten(err error) error {
    20→func flatten(err error, flatErr *Error) {
    21→	switch err := err.(type) {
    22→	case *Error:
      →…
flatten_test.go
format.go
     6→import (
     7→	"fmt"
     8→	"strings"
     9→)
    11→// ErrorFormatFunc is a function callback that is called by Error to
    12→// turn the list of errors into a string.
    13→type ErrorFormatFunc func([]error) string
    15→// ListFormatFunc is a basic formatter that outputs the number of errors
    16→// that occurred along with a bullet point list of the errors.
    17→func ListFormatFunc(es []error) string {
format_test.go
group.go
     6→import "sync"
     8→// Group is a collection of goroutines which return errors that need to be
     9→// coalesced.
    10→type Group struct {
    11→	mutex sync.Mutex
    12→	err   *Error
    13→	wg    sync.WaitGroup
    14→}
    16→// Go calls the given function in a new goroutine.
    17→//
    18→// If the function returns an error it is added to the group multierror which
      →…
    20→func (g *Group) Go(f func() error) {
    34→// Wait blocks until all function calls from the Go method have returned, then
    35→// returns the multierror.
    36→func (g *Group) Wait() *Error {
group_test.go
multierror.go
     6→import (
     7→	"errors"
     8→	"fmt"
     9→)
    11→// Error is an error type to track multiple errors. This is used to
    12→// accumulate errors in cases and return them as a single "error".
    13→type Error struct {
    14→	Errors      []error
    15→	ErrorFormat ErrorFormatFunc
    16→}
    18→func (e *Error) Error() string {
    19→	fn := e.ErrorFormat
    20→	if fn == nil {
    21→		fn = ListFormatFunc
    22→	}
    23→
    24→	return fn(e.Errors)
    25→}
    27→// ErrorOrNil returns an error interface if this Error represents
    28→// a list of errors, or returns nil if the list of errors is empty. This
    29→// function is useful at the end of accumulation to make sure that the value
      →…
    31→func (e *Error) ErrorOrNil() error {
    42→func (e *Error) GoString() string {
    43→	return fmt.Sprintf("*%#v", *e)
    44→}
    46→// WrappedErrors returns the list of errors that this Error is wrapping. It is
    47→// an implementation of the errwrap.Wrapper interface so that multierror.Error
    48→// can be used with that library.
      →…
    53→func (e *Error) WrappedErrors() []error {
    60→// Unwrap returns an error from Error (or nil if there are no errors).
    61→// This error returned will further support Unwrap to get the next error,
    62→// etc. The order will match the order of Errors in the multierror.Error
      →…
    71→func (e *Error) Unwrap() error {
    88→// chain implements the interfaces necessary for errors.Is/As/Unwrap to
    89→// work in a deterministic way with multierror. A chain tracks a list of
    90→// errors while accounting for the current represented error. This lets
    91→// Is/As be meaningful.
    92→//
      →…
    99→type chain []error
   101→// Error implements the error interface
   102→func (e chain) Error() string {
   106→// Unwrap implements errors.Unwrap by returning the next error in the
   107→// chain or nil if there are no more errors.
   108→func (e chain) Unwrap() error {
   116→// As implements errors.As by attempting to map to the current value.
   117→func (e chain) As(target interface{}) bool {
   121→// Is implements errors.Is by comparing the current value directly.
   122→func (e chain) Is(target error) bool {
multierror_test.go
   208→// nestedError implements error and is used for tests.
   209→type nestedError struct{}
prefix.go
     6→import (
     7→	"fmt"
     8→)
    10→// Prefix is a helper function that will prefix some text
    11→// to the given error. If the error is a multierror.Error, then
    12→// it will be prefixed to each wrapped error.
      →…
    16→func Prefix(err error, prefix string) error {
prefix_test.go
sort.go
     6→// Len implements sort.Interface function for length
     7→func (err *Error) Len() int {
    15→// Swap implements sort.Interface function for swapping elements
    16→func (err Error) Swap(i, j int) {
    20→// Less implements sort.Interface function for determining order
    21→func (err Error) Less(i, j int) bool {
sort_test.go
